--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #F7F3E9;
 }
 header {
     background-color: #0E1F29;
@@ -16,9 +17,12 @@ header {
     margin-right: 1%;
 }
 
+#letrasFoot{
+    color: white;
+}
+
 footer {
     background-color: #0E1F29;
-    color: #333;
     padding: 10px;
     text-align: center;
     position: fixed;
