--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #F7F3E9;
 }
+
 header {
     background-color: #0E1F29;
     padding: 5px;
@@ -19,6 +20,29 @@ header {
 
 #letrasFoot{
     color: white;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra horizontalmente los elementos dentro del contenedor */
+}
+
+.info {
+    border: 2px solid #333; 
+    border-radius: 20px; 
+    padding: 20px; 
+    width: fit-content; 
+    margin: 20px; 
+    background-color: #0E1F29;
+    border-bottom: 5px solid #a34911;
+    margin-bottom: auto;
+}
+
+.info p {
+    margin: 0; 
+    font-size: 16px; 
+    color: #fefefe; 
 }
 
 footer {
