--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ header {
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centra horizontalmente los elementos dentro del contenedor */
+    align-items: center;
 }
 
 .info {
