--- a/css/styles.css
+++ b/css/styles.css
@@ -23,15 +23,17 @@ header {
 }
 
 #text1 {
-    margin: 60px; 
+    margin: 70px; 
     padding: 0 140px;
 }
 
 #text2{
-    text-align: center;
     color: #8F5BBD;
     font-size: 20px;
     font-weight: bold;
+    border-bottom: 2px solid #000; 
+    padding-bottom: 5px; 
+    display:flex;
 }
 
 #text3{
