--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -10,7 +14,32 @@ header {
     padding: 5px;
     display: flex;
     align-items: center; 
-    height: 60px;
+    height: 65px;
+}
+
+.sidebar {    
+    height: 75%; 
+    width: 60px; 
+    position: fixed; /* Fijar la barra al lado derecho de la pág */
+    background-color: #D0E6E3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between; 
+    padding: 40px 0; 
+    padding-top: 40px;  
+    border-radius: 0 15px 15px 0; 
+    top: 12%; 
+}
+
+.sidebar a {
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+.sidebar .icon {
+    width: 30px;
+    height: 30px;
 }
 
 .logo{
@@ -23,7 +52,7 @@ header {
 }
 
 #text1 {
-    margin: 70px; 
+    margin: 80px; 
     padding: 0 140px;
 }
 
