--- a/css/styles.css
+++ b/css/styles.css
@@ -84,3 +84,49 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+/*CSS de Contactanos: */
+#cont_title{
+    text-align: center;
+    border-bottom: 2px solid rgb(0, 0, 0);
+    margin-left: 30%;
+    margin-right: 30%;
+    font-size: 50px;
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+
+#contactanos{
+    display: flex;
+}
+
+#cont_informacion{
+    align-items: center;
+    padding-right: 30%;
+    padding-left: 15%;
+}
+
+.cont_contenido{
+    text-align: center;
+    font-size: 35px;
+    line-height: 1.25;
+}
+
+#formulario{
+    margin-top: 2%;
+    padding-right: 15%;
+    font-size: 25px;
+
+}
+
+.text_input{
+    margin-top: 7%;
+    
+}
+
+.input{
+    font-size: 25px;
+
+}
+
+
