--- a/css/styles.css
+++ b/css/styles.css
@@ -102,8 +102,8 @@ footer {
 
 #cont_informacion{
     align-items: center;
-    padding-left: 15%;
-    margin-right: 15%;
+    padding-left: 10%;
+    margin-right: 10%;
 }
 
 .cont_contenido{
@@ -113,34 +113,37 @@ footer {
 }
 
 #caja_formulario{
-    margin-top: 2%;
+    margin-top: 1.3%;
     margin-right: 10%;
     font-size: 25px;
     background-color: #A7D7C5;
-
-    padding-bottom: 5%;
     
-    padding-top: 1%;
+    padding-right: 1%;
+    
+    padding-bottom: 5%;
+    margin-bottom: 50px;
+
     height: 0%;
 }
 
 #formulario{
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .text_input{
-    margin-top: 8%;
+    margin-top: 40px;
 }
 
 .caja_input{
-    border-bottom: 2px solid rgb(0, 0, 0);
-    padding-right: 30px;
+    border-bottom: 2.3px solid rgb(0, 0, 0);
+    width: 550px;
 }
 
 .input{
     font-size: 25px;
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
+    width: 550px;
 }
 
