--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ header {
     display: flex;
     align-items: center; 
     height: 65px;
+    justify-content: space-between;
 }
 
 .sidebar {    
@@ -29,17 +30,25 @@ header {
     padding: 40px 0; 
     padding-top: 40px;  
     border-radius: 0 15px 15px 0; 
-    top: 12%; 
+    top: 15%; 
 }
 
-.sidebar a {
-    text-decoration: none;
-    margin-bottom: 20px;
+.image-container {
+    display: flex; 
+    align-items: center; 
+    width: 100%;
+}
+
+.loginBt {
+    width: 40px;
+    height: 40px;
+    filter: invert(1) brightness(2); 
+    margin-left: 40%;
 }
 
 .sidebar .icon {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 }
 
 .logo{
@@ -69,12 +78,8 @@ header {
     text-align: justify;
 }
 
-section > div > div {
+.contNosotros{
     margin-bottom: 50px; 
-}
-
-section p {
-    margin-bottom: 10px; 
 }
 
 footer {
@@ -88,10 +93,10 @@ footer {
 /*CSS de Contactanos: */
 #cont_title{
     text-align: center;
-    font-size: 50px;
     border-bottom: 2px solid rgb(0, 0, 0);
     margin-left: 30%;
     margin-right: 30%;
+    font-size: 50px;
     margin-top: 0%;
     margin-bottom: 0%;
 }
@@ -102,8 +107,8 @@ footer {
 
 #cont_informacion{
     align-items: center;
-    padding-left: 10%;
-    margin-right: 10%;
+    padding-right: 30%;
+    padding-left: 15%;
 }
 
 .cont_contenido{
@@ -112,38 +117,18 @@ footer {
     line-height: 1.25;
 }
 
-#caja_formulario{
-    margin-top: 1.3%;
-    margin-right: 10%;
-    font-size: 25px;
-    background-color: #A7D7C5;
-    
-    padding-right: 1%;
-    
-    padding-bottom: 5%;
-    margin-bottom: 50px;
-
-    height: 0%;
-}
-
 #formulario{
-    padding-left: 25px;
-    padding-right: 25px;
+    margin-top: 2%;
+    padding-right: 15%;
+    font-size: 25px;
+
 }
 
 .text_input{
-    margin-top: 40px;
-}
-
-.caja_input{
-    border-bottom: 2.3px solid rgb(0, 0, 0);
-    width: 550px;
+    margin-top: 7%;
+    
 }
 
 .input{
     font-size: 25px;
-    background-color: rgba(0, 0, 0, 0);
-    border-color: rgba(0, 0, 0, 0);
-    width: 550px;
 }
-
