--- a/css/styles.css
+++ b/css/styles.css
@@ -93,10 +93,10 @@ footer {
 /*CSS de Contactanos: */
 #cont_title{
     text-align: center;
+    font-size: 50px;
     border-bottom: 2px solid rgb(0, 0, 0);
     margin-left: 30%;
     margin-right: 30%;
-    font-size: 50px;
     margin-top: 0%;
     margin-bottom: 0%;
 }
@@ -107,8 +107,8 @@ footer {
 
 #cont_informacion{
     align-items: center;
-    padding-right: 30%;
-    padding-left: 15%;
+    padding-left: 10%;
+    margin-right: 10%;
 }
 
 .cont_contenido{
@@ -117,18 +117,37 @@ footer {
     line-height: 1.25;
 }
 
-#formulario{
-    margin-top: 2%;
-    padding-right: 15%;
+#caja_formulario{
+    margin-top: 1.3%;
+    margin-right: 10%;
     font-size: 25px;
+    background-color: #BEDFCF;
+    
+    padding-right: 1%;
+    
+    padding-bottom: 5%;
+    margin-bottom: 50px;
 
+    height: 0%;
+}
+
+#formulario{
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .text_input{
-    margin-top: 7%;
-    
+    margin-top: 40px;
+}
+
+.caja_input{
+    border-bottom: 2.3px solid rgb(0, 0, 0);
+    width: 550px;
 }
 
 .input{
     font-size: 25px;
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgba(0, 0, 0, 0);
+    width: 550px;
 }
