--- a/css/styles.css
+++ b/css/styles.css
@@ -118,14 +118,14 @@ footer {
 }
 
 #caja_formulario{
-    margin-top: 1.3%;
+    margin-top: 1.25%;
     margin-right: 10%;
     font-size: 25px;
     background-color: #BEDFCF;
     
     padding-right: 1%;
     
-    padding-bottom: 5%;
+    padding-bottom: 15px;
     margin-bottom: 50px;
 
     height: 0%;
@@ -150,4 +150,26 @@ footer {
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
     width: 550px;
+}
+
+#enviar_caja{
+    text-align: center;    
+}
+
+#enviar{
+    font-size: 35px;
+    text-transform: uppercase;
+    transform: translate(0px, 80%);
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+    padding-right: 2%;
+    padding-left: 2%;
+    background-color:#ffffff;    
+    border-radius: 13px;
+    border-color: #00000000;
+    cursor: pointer;
+    transition: background-color 0.1s;
+}
+#enviar:hover{
+    background-color: #ececec;
 }
