--- a/css/styles.css
+++ b/css/styles.css
@@ -245,4 +245,77 @@ footer {
     width: auto;
     overflow-x: scroll;
   }
-  
+  /*Css de login*/
+.ub1
+{
+text-align:left;
+font-weight: bold;
+color:white;
+margin-bottom:0.5em;
+margin-top:0.5em;
+}
+.caja1
+{
+	background-color: rgba(240, 230, 189, 0.575);
+	width:20em;
+    height: auto;
+    position: relative;
+    margin: -30em 0em 0em 0em;
+    padding: 2em;
+	border-radius: 1em;
+	color:black;
+	font-weight: bold
+
+
+}
+input, select
+{
+	width: 100%;
+    padding: 0.5em;
+	font-size:1em;
+	border-radius:5px;
+	border:1px solid black;
+	color:black;
+	text-align:left;
+	border: none;
+	
+}
+
+input::placeholder 
+{
+  color: #1E265D;
+  font-weight: bold;
+   opacity: 0.5; 
+}
+
+input[type=submit],input[type=reset]
+{
+margin-top: 1.5em;
+width:48%;
+text-align:center;
+background-color: #4BF3AE;
+color:black;
+font-weight: bold; 
+border: none; 
+border-radius: 5px; 
+
+}
+input[type=checkbox]
+{
+margin-left:0;
+width:10%;
+
+
+}
+
+.imagen {
+    transform: translate(100px, -80px);  /* Mueve la imagen 20 píxeles a la derecha y 10 píxeles hacia abajo */
+}
+
+.formtlo
+{
+	font-size:2em;
+	font-weight: bold;
+	padding-bottom:0.8em;
+	color:rgb(5, 2, 2);
+}
