--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,8 @@ footer {
     background-color: transparent;
     border-color: transparent;
     width: 550px;
-    outline: none;    
+    outline: none;
+    border-radius: 0;   
 }
 .input:focus{
     background-color: #8ed1b1;
