--- a/css/styles.css
+++ b/css/styles.css
@@ -96,14 +96,17 @@ footer {
     justify-content: center;
 }
 
+#caja_title_cont{
+    margin-left: 30%;
+    margin-right: 30%;   
+    border-bottom: 2px solid rgb(0, 0, 0);
+}
+
 #cont_title{
     text-align: center;
-    font-size: 50px;
-    border-bottom: 2px solid rgb(0, 0, 0);
-    margin-left: 30%;
-    margin-right: 30%;
+    font-size: 300%;
     margin-top: 0%;
-    margin-bottom: 0%;    
+    margin-bottom: 0%;
 }
 
 #contactanos{
@@ -124,8 +127,8 @@ footer {
 }
 
 .cont_contenido{
-    text-align: center;
-    font-size: 200%;    
+    text-align: center;    
+    font-size: clamp(25px, 300%, 30px);
     line-height: 1.25;
 }
 
