--- a/Game/CSS/styles.css
+++ b/Game/CSS/styles.css
@@ -1,3 +1,10 @@
 body{
     background-color: antiquewhite;
 }
+
+#game {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
